<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/llActivityMainWeather"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imgBackground"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08"
        android:src="@drawable/bp32"
        android:scaleType="fitXY"/>


    <TableLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/tableLayout">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/day"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:id="@+id/tvDay0"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:text="@string/temp"
                android:textSize="50dp"
                android:textColor="@android:color/white"
                android:id="@+id/tvTemp"
                android:layout_column="1" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_column="3">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingTop="30dp"
                    android:text="@string/tempMaxMin"
                    android:textColor="@android:color/white"
                    android:id="@+id/tvTempMaxMin"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgclgt"
                    android:layout_column="3" />

            </LinearLayout>
        </TableRow>
    </TableLayout>



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.06">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="18 00"
                android:textColor="@android:color/white"
                android:id="@+id/tvDay1"
                android:gravity="center"/>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:scaleType="fitXY"
                android:id="@+id/imgsun1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="30"
                android:textColor="@android:color/white"
                android:id="@+id/tvTem1"
                android:gravity="center"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Clear"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:id="@+id/tvMain1"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="0.06">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="18 00"
                android:textColor="@android:color/white"
                android:id="@+id/tvDay2"
                android:gravity="center"/>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:scaleType="fitXY"
                android:id="@+id/imgsun2"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="30"
                android:textColor="@android:color/white"
                android:id="@+id/tvTem2"
                android:gravity="center"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Clear"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:id="@+id/tvMain2"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="0.06">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="18 00"
                android:textColor="@android:color/white"
                android:id="@+id/tvDay3"
                android:gravity="center"/>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:scaleType="fitXY"
                android:id="@+id/imgsun3"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="30"
                android:textColor="@android:color/white"
                android:id="@+id/tvTem3"
                android:gravity="center"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Clear"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:id="@+id/tvMain3"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="0.06">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="18 00"
                android:textColor="@android:color/white"
                android:id="@+id/tvDay4"
                android:gravity="center"/>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:scaleType="fitXY"
                android:id="@+id/imgsun4"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="30"
                android:textColor="@android:color/white"
                android:id="@+id/tvTem4"
                android:gravity="center"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Clear"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:id="@+id/tvMain4"/>
        </LinearLayout>
    </TableRow>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tableLayout"
        android:layout_toEndOf="@+id/tableLayout"
        android:layout_alignBottom="@+id/tableLayout"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:id="@+id/tvLocation"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_gravity="right"/>

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/imgsun0"
            android:scaleType="fitXY"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:id="@+id/tvMain"
            android:textSize="15dp"
            android:textColor="@android:color/white"
            android:layout_gravity="right"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:id="@+id/tvWind"
            android:textSize="15dp"
            android:textColor="@android:color/white"
            android:layout_gravity="right"/>

    </LinearLayout>


</RelativeLayout>